more data added

--- a/public/css/darktheme.css
+++ b/public/css/darktheme.css
@@ -34,3 +34,10 @@ li.el-select-dropdown__item.hover {
 #madeby {
   color:#dedede;
 }
+
+.darkblue {
+  color:#84a9ac;
+}
+.purple {
+  color: #b590ca;
+}
