--- a/public/css/lighttheme.css
+++ b/public/css/lighttheme.css
@@ -36,6 +36,9 @@
   width:100%;
   height:600px;
 }
+#barchart {
+  height:300px;
+}
 .top-left {
   position:fixed;
   top:1%;
@@ -43,4 +46,7 @@
 }
 .footer {
   background-color: #f5f5f5;
+}
+.modal-container {
+  background-color: #fff;
 }
